# fitsy

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  pyproject.toml  readme.md
.github/workflows/: ci.yml  release.yml
docs/: Makefile  conf.py  index.rst
docs/api/: errors.rst  headers.rst  reading.rst  wcs.rst  writing.rst
docs/guide/: convenience.rst  diff.rst  install.rst  quickstart.rst  reading_images.rst  tables.rst  update_mode.rst  verifying.rst  wcs.rst  writing_files.rst
examples/: README.md  fit_wcs.rs  read_image.rs  read_table.rs  wcs.rs  write_image.rs  write_table.rs
examples/python/: convenience.py  diff.py  fit_wcs.py  quickstart.py  reading_images.py  tables.py  update_mode.py  wcs.py  writing_files.py
src/: checksum.rs  compression.rs  data.rs  diff.rs  error.rs  hdu.rs  header.rs  interop.rs  io.rs  lib.rs  main.rs  python.rs  wcs.rs
src/compression/: hcompress.rs  plio.rs  quantize.rs  rice.rs
src/data/: encoding.rs  ieee.rs  scaling.rs  unsigned.rs
src/hdu/: ascii_table.rs  bintable.rs  builder.rs  file.rs  image.rs  kind.rs  random_groups.rs  subarray.rs
src/header/: builder.rs  card.rs  observatory.rs  reserved.rs  time.rs  units.rs  validation.rs  value.rs
src/interop/: faer.rs  nalgebra.rs
src/io/: append.rs  block.rs  source.rs  update.rs  writer.rs
src/python/: convenience.rs  diff.rs  file.rs  hdu.rs  header.rs  table.rs  wcs.rs  writer.rs
src/wcs/: celestial.rs  celestial_block.rs  dss.rs  fit.rs  linear.rs  parse.rs  projection.rs  projections.rs  serialize.rs  sip.rs  spectral.rs  tab.rs  tnx.rs  tpv.rs  units.rs  wat.rs
src/wcs/projections/: conic.rs  cylindrical.rs  healpix.rs  polyconic.rs  pseudocyl.rs  quadcube.rs  zenithal.rs
stubs/: fitsy.pyi
tests/: compression_read.rs  compression_write.rs  interop.rs  random_groups.rs  real_world.rs  real_world_round_trip.rs  subarray.rs  tables.rs  wcs.rs  wcs_integration.rs  writer.rs
tests/data/: 534855p.fits.fz  74721b067-w2-int-1b.fits  SPITZER_I1_48847360_0000_0000_2_bcd.fits  coj0m416-sq36-20240423-0201-e91.fits  dss_plate.fits  extend_primary.fits  gen_fixtures.py  gen_wcs_test_data.py  image_3d.fits  image_blank.fits  image_empty.fits  image_f32.fits  image_f64.fits  image_i16.fits  image_i32.fits  image_i64.fits  image_i8.fits  image_scaled.fits  image_u16.fits  image_u32.fits  ldji01giq_corrtag_a.fits  ldji01giq_counts_a.fits  lsc0m476-sq34-20240826-0168-e91.fits  multi_checksum.fits  multi_hdu.fits  random_groups.fits  table_ascii.fits  table_binary.fits  table_multi.fits  table_tnull.fits  table_tscal.fits  table_vla.fits  wcs_ait.fits  wcs_car.fits  wcs_multi.fits  wcs_sin.fits  wcs_sip.csv  wcs_standard.csv  wcs_tan.fits  wcs_tan_sip.fits  (+3 more)
tests/python/: test_astropy_parity.py  test_convenience_and_special_hdus.py  test_diff_and_positional_header.py  test_inplace_pixel_patch.py  test_lazy_and_truncation.py  test_section.py  test_smoke.py  test_streaming_append.py  test_update_mode.py
